<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jjzz</string>
    <string name="author">Tice, Jason</string>
    <string name="thanks">ch.linghu</string>
    <string name="refresh">Refresh</string>
    <string name="setting">Settings</string>
    <string name="twitteraccount">Weibo Account</string>
    <string name="accounts">Accounts</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="apiaddress">Twitter API Address</string>
    <string name="searchapi">Twitter Search API</string>
    <string name="usessl">Use Secure Connection</string>
    <string name="home">Home</string>
    <string name="mentions">Mentions</string>
    <string name="direct">Direct</string>
    <string name="favorites">Favorites</string>
    <string name="newpost">New</string>
    <string name="listlength">Tweets Counts</string>
    <string name="display">Display</string>
    <string name="search">Search</string>
    <string name="newsearch">New Search</string>
    <string name="statusdbar">Show Status Bar</string>
    <string name="refreshafterpost">Refresh After Posting</string>
    <string name="refreonlaunch">Refresh On Launch</string>
    <string name="fontsize">Font Size</string>
    <string name="trends">Trends</string>
    <string name="trends_current">Current</string>
    <string name="trends_daily">Daily</string>
    <string name="trends_weekly">Weekly</string>
    <string name="clearcache">Clear Image Cache</string>
    <string name="notification">Notifications</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="notification_interval">Refresh Interval</string>
    <string name="notification_home">Home Tweets</string>
    <string name="notification_mention">Mention Tweets</string>
    <string name="notification_direct">Direct Messages</string>
    <string name="pictureservice">Picture Sharing Service</string>
    <string name="picturesharing">Picture Sharing</string>
    <string name="picturequality">Picture Size</string>
    <string name="shortenlinkservices">Shorten Link</string>
    <string name="notification_timeline">Refresh Timeline</string>
    <string name="notification_method">Notification</string>
    <string name="notification_sound">Sound</string>
    <string name="notification_vibrate">Vibration</string>
    <string name="notification_led">LED</string>
    <string name="exit">Exit</string>
    <string name="friendsfollowers">Friends</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="longclick">Long click to open links</string>
    <string name="autohidetoolbar">Auto-hide Toolbar</string>
    <string name="about">About</string>
    <string name="others">Information</string>
    <string name="displayicon">Display profile icon</string>
    <string name="addaccount">Add</string>
    <string name="editaccount">Edit</string>
    <string name="delaccount">Delete</string>
    <string name="theme">Color Scheme</string>
    
    <string name="advance">Advance</string>
    <string name="advance_settings">Advance Settings</string>
    
    <string name="retweet">Retweet</string>
    <string name="reply">Reply</string>
    <string name="favorite">Favorite</string>
    
    <string name="rt">RT</string>
    <string name="re">RE</string>
    <string name="dm">DM</string>
    
    <string name="get_more_tweets">Click here to load more tweets</string>
    
    <string name="imageviewer_back">return</string>
    <string name="comment">comment</string>
    <string name="comments">comments</string>
    <string name="forward">forward</string>
    <string name="itemmenu_bookmark">favorite</string>
    <string name="more">more</string>
    <string name="save">save</string>
    
    <string name="short_message">short_message</string>
    <string name="email">email</string>
    
    <string name="comment_add_forward">send as a weibo</string>
    <string name="new_label">you can input：</string>
    <string name="direct_messages">messages</string>
    <string name="count_comments">comments</string>
</resources>
